test_fixtures/unexpected_character.lox
// ScannerError: UnexpectedCharacter | at l3c7
// ParserError: ExpectedSemicolon found OpenParen at l3c4
foo(a | b);
